# opengl-fun2

./: .gitignore  CMakeLists.txt  meson.build
include/: camera.hh  file_utils.hh  model.hh  shader.hh  shape.hh  shape2d.hh  shape3d.hh  stb_image.h  texture.hh  window.hh
shaders/: colors.frag  colors.vert  light.frag  light.vert  shader.frag  shader.vert
src/: CMakeLists.txt  camera.cc  file_utils.cc  main.cc  meson.build  model.cc  shader.cc  shape.cc  shape2d.cc  texture.cc  window.cc
